k8s/apps/dataflarelabs-docs/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dataflarelabs-docs
  annotations:
    operator.1password.io/auto-restart: "true"
