k8s/apps/dataflarelabs-docs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataflarelabs-docs
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dataflarelabs-docs
  template:
    metadata:
      labels:
        app: dataflarelabs-docs
    spec:
      containers:
        - name: dataflarelabs-docs
          image: ghcr.io/wtp43/dataflarelabs-docs:v0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
      imagePullSecrets:
        - name: docker-secret
