k8s/apps/dataflarelabs-docs/external-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dataflarelabs-docs-external
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - docs.dataflarelabs.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dataflarelabs-docs-svc
          port: 80
